como agregar mas elementos al diseño

--- a/Patrones de Diseño/04-3columnas_iguales_flexbox/css/styles.css
+++ b/Patrones de Diseño/04-3columnas_iguales_flexbox/css/styles.css
@@ -42,6 +42,7 @@ h1 {
   .tres-columnas {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
   .entrada-blog {
     flex-basis: calc(33.3% - 1rem);
